# algorithm_scheduler

./: CMakeLists.txt  README.md  package.xml
config/: docking_scheduler.yaml  launch_registry.yaml  pipeline_inspection_scheduler.yaml
include/scheduler/: docking_controller.h  mavros_command_interface.h  mission_controller_factory.h  pipeline_inspection_controller.h  rc_command_mapper.h  simple_mission_controller.h  vehicle_command_interface.h
launch/: docking.launch  docking_algorithm.launch  docking_logging.launch  docking_todo.launch  pipeline_inspection.launch  pipeline_inspection_demo.launch  pipeline_logging.launch  scheduler_demo.launch
msg/: PipelineCenterlineObservation.msg  PipelineLine.msg
scheduler-master/: package.xml
scheduler-master/config/: pipeline_inspection_scheduler.yaml
scheduler-master/include/scheduler/: mavros_command_interface.h  mission_controller.h  pipeline_inspection_controller.h
scheduler-master/launch/: pipeline_inspection.launch  pipeline_inspection_demo.launch  scheduler_demo.launch
scheduler-master/msg/: ImagePoint.msg  PipelineCenterlineObservation.msg
scheduler-master/scripts/: external_pipeline_algorithm_bridge.py
scheduler-master/src/: mavros_command_interface.cpp  mission_controller_factory.cpp
scripts/: docking_apriltag_detector.py  docking_data_logger.py  docking_light_strip_detector.py  docking_vision_detector.py  external_docking_json_bridge.py  pipeline_data_logger.py  pipeline_detection_stub.py  scheduler_launch.py
src/: docking_controller.cpp  mavros_command_interface.cpp  mission_controller_factory.cpp  pipeline_inspection_controller.cpp  rc_command_mapper.cpp  scheduler_node.cpp  simple_mission_controller.cpp
srv/: ControlModule.srv
test/: test_rc_command_mapper.cpp
